--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "typescript": "^4.7.4"
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
