--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier-format": "prettier --config .prettierrc '**/*.{ts,tsx}' --write"
   },
   "dependencies": {
     "dayjs": "^1.11.5",
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.2"
