--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "prettier-format": "prettier --config .prettierrc '**/*.{ts,tsx}' --write"
   },
   "dependencies": {
@@ -19,6 +20,8 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
