--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "semi": true,
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 80
+  "printWidth": 80,
+  "extends": ["next", "prettier"]
 }
