--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/styled-components": "^5.1.25",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
