--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier-format": "prettier --config .prettierrc '**/*.{ts,tsx}' --write"
+    "prettier-format": "prettier --config .prettierrc '**/*.{ts,tsx}' --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "dayjs": "^1.11.5",
@@ -23,6 +24,7 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
